# smart-calc

./: pyproject.toml
