[tool.poetry]
name = "smart-calc"
version = "0.1.0"
description = ""
authors = ["LuziaAm <luzia.castro29@gmail.com>"]
readme = "README.md"
packages = [{include = "smart_calc"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
